--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-disc-line" style="color: #b20969;"></i>
-            <h3>Moton Ideal</h3>
+            <h3>Making Music</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
