--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.Tech</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>rathodvr2001@gmail.com</span>
                 </li>
@@ -107,10 +107,7 @@
             </div>
           </div>
           <p>
-            Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut.
-            Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-            Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
-            Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+            I am a highly skilled web developer with over 6 months of experience in building responsive, user-friendly, and performance-optimized websites. I specialize in front-end and back-end development using technologies such as HTML, CSS, JavaScript, PHP, and frameworks like Bootstrap. Additionally, I am proficient in WordPress, Moodle, and Git, enabling me to create custom solutions for various clients.
           </p>
         </div>
       </div>
