--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
             <img src="assets/img/portfolio/portfolio-10.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>i</h4>
-              <p>JSON File to Images Viewer</p>
+              <p>JSON File to Images View</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-10.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
