--- a/index.html
+++ b/index.html
@@ -732,34 +732,27 @@
         </div>
       </div>
 
-      <form id="contact-form" action="#" method="post" role="form" class="php-email-form mt-4">
-  <div class="row">
-    <div class="col-md-6 form-group">
-      <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-    </div>
-    <div class="col-md-6 form-group mt-3 mt-md-0">
-      <input type="email" name="email" class="form-control" id="email" placeholder="Your Email" required>
-    </div>
-  </div>
-
-  <div class="form-group mt-3">
-    <input type="text" name="subject" class="form-control" id="subject" placeholder="Subject" required>
-  </div>
-
-  <div class="form-group mt-3">
-    <textarea name="message" class="form-control" rows="5" placeholder="Message" required></textarea>
-  </div>
-
-  <!-- Status Messages -->
-  <div class="my-3">
-    <div class="loading">Loading</div>
-    <div class="error-message"></div>
-    <div class="sent-message">Your message has been sent. Thank you!</div>
-  </div>
-
-  <div class="text-center">
-    <button type="submit">Send Message</button>
-  </div>
+     <form id="contact-form" role="form" class="php-email-form mt-4">
+            <div class="row">
+              <div class="col-md-6 form-group">
+                 <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+             </div>
+          <div class="col-md-6 form-group mt-3 mt-md-0">
+                 <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+        </div>
+      </div>
+         <div class="form-group mt-3">
+               <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+         </div>
+        <div class="form-group mt-3">
+               <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+        </div>
+        <div class="my-3">
+             <div class="loading" style="display:none;color:blue;">Loading...</div>
+           <div class="error-message" style="display:none;color:red;"></div>
+           <div class="sent-message" style="display:none;color:green;">Your message has been sent. Thank you!</div>
+      </div>
+  <div class="text-center"><button type="submit">Send Message</button></div>
 </form>
 
 
