--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
         </div>
       </div>
 
-     <form id="contact-form" method="post" role="form" class="php-email-form mt-4">
+     <form id="contact-form" method="Post" role="form" class="php-email-form mt-4">
   <div class="row">
     <div class="col-md-6 form-group">
       <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -774,7 +774,53 @@
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
     Designed by <a href="#">Vikas Rathod</a>
   </div>
+    <script>
+      // contact form
+document.getElementById('contact-form').addEventListener('submit', function(e) {
+  e.preventDefault(); // Stop page reload
 
+  const form = e.target;
+  const loading = form.querySelector('.loading');
+  const errorMessage = form.querySelector('.error-message');
+  const sentMessage = form.querySelector('.sent-message');
+
+  // Show loading, hide errors/success
+  loading.style.display = "block";
+  errorMessage.style.display = "none";
+  sentMessage.style.display = "none";
+
+  const formData = {
+    name: form.name.value,
+    email: form.email.value,
+    subject: form.subject.value,
+    message: form.message.value
+  };
+
+  fetch("https://script.google.com/macros/s/AKfycby0bYoUKxXnaEo6btK_j85JmFKyjZ_ZD8d-bbMyLNNyZwP3dO8f-McJEOQLt1znfQ0z/exec", {  // <-- apni Google Apps Script Web App URL paste karein
+    method: "POST",
+    body: JSON.stringify(formData),
+    headers: { "Content-Type": "application/json" }
+  })
+    .then(response => response.json())
+    .then(data => {
+      loading.style.display = "none";
+
+      if (data.success === true) {
+        sentMessage.style.display = "block";
+        form.reset();
+      } else {
+        errorMessage.textContent = data.error || "Error sending message.";
+        errorMessage.style.display = "block";
+      }
+    })
+    .catch(err => {
+      loading.style.display = "none";
+      console.error(err);
+      errorMessage.textContent = "Request error: " + err;
+      errorMessage.style.display = "block";
+    });
+});
+      </script>
   <!-- Vendor JS Files -->
   <!-- <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script> -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
