--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
         </div>
       </div>
 
-     <form id="contact-form" method="Post" role="form" class="php-email-form mt-4">
+<form id="contact-form" method="post" role="form" class="php-email-form mt-4">
   <div class="row">
     <div class="col-md-6 form-group">
       <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -752,15 +752,16 @@
 
   <!-- Status Messages -->
   <div class="my-3">
-    <div class="loading">Loading</div>
-    <div class="error-message"></div>
-    <div class="sent-message">Your message has been sent. Thank you!</div>
+    <div class="loading" style="display:none;color:blue;">Loading...</div>
+    <div class="error-message" style="display:none;color:red;"></div>
+    <div class="sent-message" style="display:none;color:green;">Your message has been sent. Thank you!</div>
   </div>
 
   <div class="text-center">
     <button type="submit">Send Message</button>
   </div>
 </form>
+
 
 
 
@@ -774,8 +775,8 @@
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
     Designed by <a href="#">Vikas Rathod</a>
   </div>
-    <script>
-      // contact form
+  
+   <script>
 document.getElementById('contact-form').addEventListener('submit', function(e) {
   e.preventDefault(); // Stop page reload
 
@@ -784,43 +785,46 @@ document.getElementById('contact-form').addEventListener('submit', function(e) {
   const errorMessage = form.querySelector('.error-message');
   const sentMessage = form.querySelector('.sent-message');
 
-  // Show loading, hide errors/success
+  // Show loading, hide other messages
   loading.style.display = "block";
   errorMessage.style.display = "none";
   sentMessage.style.display = "none";
 
+  // Collect form data
   const formData = {
-    name: form.name.value,
-    email: form.email.value,
-    subject: form.subject.value,
-    message: form.message.value
+    name: form.name.value.trim(),
+    email: form.email.value.trim(),
+    subject: form.subject.value.trim(),
+    message: form.message.value.trim()
   };
 
-  fetch("https://script.google.com/macros/s/AKfycby0bYoUKxXnaEo6btK_j85JmFKyjZ_ZD8d-bbMyLNNyZwP3dO8f-McJEOQLt1znfQ0z/exec", {  // <-- apni Google Apps Script Web App URL paste karein
+  // Send POST request to Google Apps Script Web App
+  fetch("https://script.google.com/macros/s/AKfycby0bYoUKxXnaEo6btK_j85JmFKyjZ_ZD8d-bbMyLNNyZwP3dO8f-McJEOQLt1znfQ0z/exec", {  // <-- Replace with your deployed Web App URL
     method: "POST",
-    body: JSON.stringify(formData),
-    headers: { "Content-Type": "application/json" }
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify(formData)
   })
-    .then(response => response.json())
-    .then(data => {
-      loading.style.display = "none";
+  .then(response => response.json())
+  .then(data => {
+    loading.style.display = "none";
 
-      if (data.success === true) {
-        sentMessage.style.display = "block";
-        form.reset();
-      } else {
-        errorMessage.textContent = data.error || "Error sending message.";
-        errorMessage.style.display = "block";
-      }
-    })
-    .catch(err => {
-      loading.style.display = "none";
-      console.error(err);
-      errorMessage.textContent = "Request error: " + err;
+    if (data.success === true) {
+      sentMessage.style.display = "block";
+      form.reset();
+    } else {
+      errorMessage.textContent = data.error || "Error sending message.";
       errorMessage.style.display = "block";
-    });
+    }
+  })
+  .catch(err => {
+    loading.style.display = "none";
+    console.error("Fetch error:", err);
+    errorMessage.textContent = "Request error: " + err;
+    errorMessage.style.display = "block";
+  });
 });
-      </script>
+</script>
+
   <!-- Vendor JS Files -->
   <!-- <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script> -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
