--- a/index.html
+++ b/index.html
@@ -752,9 +752,9 @@
 
   <!-- Status Messages -->
   <div class="my-3">
-    <div class="loading" style="display:none;color:blue;">Loading...</div>
-    <div class="error-message" style="display:none;color:red;"></div>
-    <div class="sent-message" style="display:none;color:green;">Your message has been sent. Thank you!</div>
+    <div class="loading" style="display:none;">Loading...</div>
+    <div class="error-message" style="display:none;"></div>
+    <div class="sent-message" style="display:none;">Your message has been sent. Thank you!</div>
   </div>
 
   <div class="text-center">
