--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@ document.getElementById('contact-form').addEventListener('submit', function(e) {
     message: form.message.value.trim()
   };
 
-  fetch("YOUR_WEB_APP_URL_HERE", { // Replace with your Web App URL
+  fetch("https://script.google.com/macros/s/AKfycbzfCjKgSEQ8jJhFoESMs321g2V_O_brTnAKOtGP4f8ZY0T6bYOd1zlsCdWHRUOXTn-Q/exec", { // Replace with your Web App URL
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify(formData)
